Build warnings were fixed